# KittyNest

./: .gitignore  README.md  README_ZH.md  index.html  package-lock.json  package.json  prompt.md  vite.config.ts
docs/: development-plan.md  memory-module-design.md  src-reorganization.md  ui-design.md
docs/superpowers/plans/: 2026-05-02-obsidian-sync.md  (+3 more)
src/: AgentDrawer.tsx  App.test.tsx  App.tsx  agentTypes.ts  api.ts  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: analysis.rs  assistant.rs  assistant_context.rs  assistant_llm.rs  assistant_tools.rs  commands.rs  config.rs  db.rs  errors.rs  lib.rs  llm.rs  main.rs  markdown.rs  memory.rs  models.rs  scanner.rs  services.rs  utils.rs
src-tauri/src/analysis/: code_context.rs  entity.rs  jobs.rs  memory_search.rs  mod.rs  session.rs  tests.rs
src-tauri/src/assistant/: context.rs  llm.rs  mod.rs  tools.rs
src-tauri/src/assistant/tools/: ask_user.rs  create_task.rs  glob.rs  grep.rs  read_file.rs  read_memory.rs  todo_write.rs
src-tauri/src/commands/: agent.rs  app_state.rs  jobs.rs  mod.rs  tasks.rs  tests.rs
src-tauri/src/config/: mod.rs  settings.rs  workspace.rs
src-tauri/src/data/: graph.rs  mod.rs  models.rs
src-tauri/src/data/db/: jobs.rs  memories.rs  mod.rs  projects.rs  schema.rs  sessions.rs  sync.rs  tasks.rs  tests.rs
src-tauri/src/llm/: client.rs  mod.rs  presets.rs  prompts.rs  tests.rs
src-tauri/src/sync/: mod.rs  obsidian.rs  renderer.rs  state.rs
src/test/: setup.ts
(+5 files in other folders)
