[package]
name = "kittynest"
version = "0.1.0"
description = "Local-first Claude Code and Codex session tracker"
authors = ["KittyNest"]
edition = "2021"

[lib]
name = "kittynest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
toml = "0.8"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
